<resources>
    <string name="app_name">CapstonApp</string>
    <string name="start_title">Capston</string>

    <string name="start_basic">기본모드</string>
    <string name="start_ai">AI모드</string>
    <string name="ai_explain">어서오세요! 맛있는 비밀이 피어나는 곳, 한식 다이어리입니다!\n
    저는 음성으로 직접 주문이 가능한 챗 키오스크입니다\n\n
    화면의 아무 곳이나 터치하면 주문화면으로 넘어갑니다\n</string>

    <string name="ai_mode_explain">지금 화면은 대화로 주문이 가능한 ai모드 화면입니다.\n
    태블릿의 오른쪽 끝부분에 점자가 있습니다. 점자의 바로 왼쪽 화면을 터치하면 음성 입력이 가능합니다\n
    음성을 통해 주문을 해주세요!</string>

   <!-- <string name="ai_explain">어서오세요! 맛있는 비밀이 피어나는 곳, 한식 다이어리입니다!\n
    무엇을 도와드릴까요?\n\n
    1. 메뉴를 소개해주세요.\n
    2. 저녁 코스 2인으로 주세요.</string>-->

    <string name="main_title">한식 다이어리</string>
    <string name="main_subtitle">맛있는 비밀이 피어나는 곳</string>

    <string name="menu_course">코스요리</string>
    <string name="menu_handon">한돈</string>
    <string name="menu_hanoo">한우</string>
    <string name="menu_ilpoom">일품</string>
    <string name="menu_drink">음료/주류</string>
    <string name="menu_orderlist">주문내역</string>
    <string name="main_aimode">AI 챗봇</string>

    <string name="bag_title">장바구니</string>
    <string name="bag_subtitle">메뉴를 선택하세요</string>
    <string name="bag_total_count">%d가지 %d개</string>
    <string name="bag_total">합계</string>
    <string name="bag_order_list">주문내역</string>
    <string name="bag_order">주문하기</string>
    <string name="bag_delete">삭제</string>

    <string name="bag_price">%s원</string>
    <string name="bag_count">%d개</string>

    <string name="popup_title">주문 하시겠습니까?</string>
    <string name="popup_subtitle">주문 내역을 잘 확인해주세요!</string>
    <string name="popup_close">닫기</string>
    <string name="popup_order">주문하기</string>

    <string name="order_title">주문내역</string>
    <string name="order_total">합계</string>
    <string name="order_back">닫기</string>
    <string name="order_pay">결제하기</string>

    <string name="popup_pay_title">결제 하시겠습니까?</string>
    <string name="popup_pay">결제하기</string>

    <string name="complete_bye">감사합니다. 한식다이어리에 또 방문해주세요. 안녕히가십시오.</string>

</resources>