<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="900dp"
    android:layout_height="600dp"
    android:background="@drawable/ic_rectangle_white"
    android:elevation="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_pay_title"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_subtitle"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_close"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/popup_close"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:elevation="60dp"
        android:background="@drawable/ic_rectangle_popup_green"
        android:layout_marginTop="170dp"
        android:layout_marginStart="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_order"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/popup_pay"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:elevation="60dp"
        android:background="@drawable/ic_rectangle_popup_orange"
        android:layout_marginEnd="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_close"/>

</androidx.constraintlayout.widget.ConstraintLayout>