<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="@color/bag_background_pink"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_bag_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bag_title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_bag_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/bag_subtitle_gray"
        android:text="@string/bag_subtitle"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_bag_title"
        app:layout_constraintStart_toStartOf="@id/tv_bag_title"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_bag_subtitle"
        app:layout_constraintBottom_toTopOf="@id/iv_bottom"
        tools:listitem="@layout/item_bag" />

    <ImageView
        android:id="@+id/iv_bottom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/ic_rectangle_order_pink"
        app:layout_constraintBottom_toTopOf="@id/iv_line"
        app:layout_constraintTop_toBottomOf="@id/rv_bag"/>

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1가지 1개"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_bottom"
        app:layout_constraintTop_toTopOf="@id/iv_bottom"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bag_total"
        android:textSize="15sp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_count"
        app:layout_constraintEnd_toStartOf="@id/tv_total_price"/>

    <TextView
        android:id="@+id/tv_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="41000원"
        android:textSize="20sp"
        android:textColor="@color/bag_price_blue"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_count"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/bag_line_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_bottom"
        app:layout_constraintBottom_toTopOf="@id/btn_order"/>

    <!--<androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_order_list"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/bag_order_list"
        android:textSize="30sp"
        android:background="@drawable/ic_rectangle_order_list_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_order"/>-->



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_order"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/bag_order"
        android:textSize="30sp"
        android:background="@drawable/ic_rectangle_order_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>