<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/order_background_pink"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/v_line_top"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/bag_line_gray"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_order"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/v_line_top"
        app:layout_constraintBottom_toTopOf="@id/tv_total"
        tools:listitem="@layout/item_order_history" />

    <View
        android:id="@+id/v_line_bottom"
        android:background="@color/bag_line_gray"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintBottom_toTopOf="@id/tv_total"/>

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_total"
        android:textSize="27sp"
        android:layout_marginEnd="100dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_total_price"
        app:layout_constraintEnd_toStartOf="@id/tv_total_price"/>

    <TextView
        android:id="@+id/tv_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="200000원"
        android:textSize="27sp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_pay"/>

    <ImageView
        android:id="@+id/iv_bottom"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:srcCompat="@drawable/ic_rectangle_benner_beige"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/order_back"
        android:textSize="30sp"
        android:background="@color/order_back_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_pay"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_pay"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/order_pay"
        android:textSize="30sp"
        android:background="@drawable/ic_rectangle_payment_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>